# flake8-exception-guard

./: README.md  aa.py  b.py  c.py  code.py  file_a.py  file_b.py  flake8_exception_guard.py  inspector.py  other_code.py  other_code_2.py  preload.py  pyproject.toml  sandbox.py  setup.cfg  zz.py
bubble/: __init__.py  bubble.py
bubble/cli/: __main__.py
tests/integration/: test_entrypoint.py  test_same_file_exceptions.py  test_self_contained_module_exceptions.py
tests/integration/cases/same_file/: same_file_multiple_exceptions.py  same_file_multiple_exceptions_nested.py  same_file_single_exception.py  same_file_single_exception_nested.py
tests/integration/cases/self_contained_module/: multiple_exceptions.py  multiple_exceptions_nested.py  single_exception.py  single_exception_nested.py
tests/integration/cases/self_contained_module/example/: other_a.py  other_b.py  other_c.py
