[metadata]
name = flake8_exception_guard
version = 0.1.0

[options]
py_modules = flake8_exception_guard
install_requires =
    flake8>=3.7
    importlib-metadata>=0.12; python_version < "3.8"

# extras dev install requires, for installing ruff
[options.extras_require]
dev =
    ruff==0.4.10
    # flake8
    # pytest
    # pytest-cov
    # pytest-mock


[options.entry_points]
flake8.extension =
    FEG = flake8_exception_guard:Plugin

[flake8]
ignore = E501, W503